Pontoon: Update Slovenian (sl) localization of Firefox Screenshots

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
   "name": "okx-public-api",
   "version": "1.0.15",
-  "description": "open api fo
+  "description": "open api for connect to OKX",
+  "m
