--- a/package.json
+++ b/package.json
@@ -6,4 +6,5 @@
   "types": "prod/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write \"src
+    "format": "prettier --write \"src/*.ts\"",
+    "lint": "tsl
