--- a/package.json
+++ b/package.json
@@ -9,4 +9,5 @@
     "format": "prettier --write \"src/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "test": "jest --config jestconfig.json",
-    "prepare": "npm run 
+    "prepare": "npm run build",
+    "prepublishOnly"
