Minor code improvements

--- a/package.json
+++ b/package.json
@@ -11,4 +11,4 @@
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
-    
+    "preversion": "npm run li
