I18n: Update translation tr (100%).

--- a/package.json
+++ b/package.json
@@ -12,4 +12,4 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
-    "version": "npm r
+    "version": "npm run format && git add -A sr
