--- a/package.json
+++ b/package.json
@@ -12,4 +12,5 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A sr
+    "version": "npm run format && git add -A src",
+    "postversion": "gi
