--- a/package.json
+++ b/package.json
@@ -14,4 +14,7 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push origin master && git push origin master --tags"
-  
+  },
+  "keywords": [
+    "okx",
+    "ap
