Add CHANGELOG entry

--- a/package.json
+++ b/package.json
@@ -22,4 +22,5 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ap
+    "url": "git+https://github.com/AparinAA/okx-public-api.git"
+  }
