--- a/package.json
+++ b/package.json
@@ -25,4 +25,4 @@
     "url": "git+https://github.com/AparinAA/okx-public-api.git"
   },
   "bugs": {
-    "url": "https://github.com/A
+    "url": "https://github.com/AparinAA/okx-public-api.git/is
