--- a/package.json
+++ b/package.json
@@ -25,4 +25,6 @@
     "url": "git+https://github.com/AparinAA/okx-public-api.git"
   },
   "bugs": {
-    "url": "https://github.com/AparinAA/okx-public-api.git/is
+    "url": "https://github.com/AparinAA/okx-public-api.git/issues"
+  },
+  "homepage": "http
