--- a/package.json
+++ b/package.json
@@ -27,4 +27,4 @@
   "bugs": {
     "url": "https://github.com/AparinAA/okx-public-api.git/issues"
   },
-  "homepage": "http
+  "homepage": "https://github.com/AparinAA/ok
