--- a/package.json
+++ b/package.json
@@ -27,4 +27,5 @@
   "bugs": {
     "url": "https://github.com/AparinAA/okx-public-api.git/issues"
   },
-  "homepage": "https://github.com/AparinAA/ok
+  "homepage": "https://github.com/AparinAA/okx-public-api.git#readme",
+  "
