--- a/package.json
+++ b/package.json
@@ -28,4 +28,5 @@
     "url": "https://github.com/AparinAA/okx-public-api.git/issues"
   },
   "homepage": "https://github.com/AparinAA/okx-public-api.git#readme",
-  "
+  "author": "X6P",
+  "licen
