--- a/package.json
+++ b/package.json
@@ -29,4 +29,5 @@
   },
   "homepage": "https://github.com/AparinAA/okx-public-api.git#readme",
   "author": "X6P",
-  "licen
+  "license": "MIT",
+  "devDependenc
