--- a/package.json
+++ b/package.json
@@ -32,4 +32,5 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^28.1.4",
-    "axios": "^0.
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1
