Auto-merge from mysql-next-mr-bugfixing.

--- a/package.json
+++ b/package.json
@@ -33,4 +33,6 @@
   "devDependencies": {
     "@types/jest": "^28.1.4",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1
+    "dotenv": "^16.0.1",
+    "jest": "^28.1.2",
+    
