--- a/package.json
+++ b/package.json
@@ -38,4 +38,5 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "tslint": "^6.1.3",
-    "ts
+    "tslint-config-prettier": "^1.18.0",
+ 
