improved code / comments at utility classes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
 {
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read mor
+    /* Visit https://aka.ms/tsconfig to read more about this file */
+
+    /* Projec
