--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,4 +2,5 @@
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
-    /* Projec
+    /* Projects */
+    // "incremen
