--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,4 +3,4 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    // "incremen
+    // "incremental": true,                      
