moving to folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,4 +3,4 @@
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
-    // "incremental": true,                              /* Save .tsbuildinf
+    // "incremental": true,                              /* Save .tsbuildinfo files to allow for increme
