--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,4 +4,4 @@
 
     /* Projects */
     // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
-    // "composite": true,                                /* Enable constraints that
+    // "composite": true,                                /* Enable constraints that allow a TypeScript project
