fix script path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,4 +5,4 @@
     /* Projects */
     // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
     // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
-    // "tsBuildInfoFile": "./.tsbuildinfo",              /
+    // "tsBuildInfoFile": "./.tsbuildinfo",              /* Specify the path to 
