--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,4 +7,4 @@
     // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
     // "tsBuildInfoFile": "./.tsbuildinfo",              /* Specify the path to .tsbuildinfo incremental compilation file. */
     // "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects. */
-    // "disableSolutionSearching": true,                 /* Opt a project out o
+    // "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference check
