--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,4 +11,4 @@
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
     /* Language and Environment */
-    "target": "es2016",                    
+    "target": "es2016",                                  /* Set t
