--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,4 +12,4 @@
 
     /* Language and Environment */
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    // "lib": [],                                        /* Specify a set of bundled library declaration files that 
+    // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment.
