--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,4 +13,5 @@
     /* Language and Environment */
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    // "jsx": "preserve",                                /* Specify what JSX c
+    // "jsx": "preserve",                                /* Specify what JSX code is generated. */
+    // "exper
