--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,4 +22,4 @@
     // "reactNamespace": "",                             /* Specify the object invoked for 'createElement'. This only applies when targeting 'react' JSX emit. */
     // "noLib": true,                                    /* Disable including any library files, including the default lib.d.ts. */
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
-    // "moduleDetection": "auto",                        /* Control what meth
+    // "moduleDetection": "auto",                        /* Control what method is used to detect module-format J
