--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,4 +26,5 @@
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    // "rootDir": "./",                                  /* Specify the root folder w
+    // "rootDir": "./",                                  /* Specify the root folder within your source files. */
+   
