--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,4 +27,4 @@
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-    // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a give
+    // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
