--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,4 +28,4 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",         
+    // "baseUrl": "./",                                  /* Spec
