--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,4 +29,4 @@
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entrie
+    // "paths": {},                                      /* Specify a set of entries that re-map imports
