--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,4 +30,4 @@
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
-    // "rootDirs": [],      
+    // "rootDirs": [],                                   /* Allo
