--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,4 +32,4 @@
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
-    // "types": [],                                      /* Specify t
+    // "types": [],                                      /* Specify type package names to be included wi
