--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,4 +33,4 @@
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
-    // "allowUmdGlobalAccess": true,                     /* Allow access
+    // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
