--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,4 +34,4 @@
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
-    // "moduleSuffixes": [],
+    // "moduleSuffixes": [],                             /* Li
