Fix rubocop errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,4 +35,5 @@
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
-    // "resolveJsonModule": true,                        /* Enable importing .json f
+    // "resolveJsonModule": true,                        /* Enable importing .json files. */
+    // "noResolve": tr
