--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,4 +36,4 @@
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
     // "resolveJsonModule": true,                        /* Enable importing .json files. */
-    // "noResolve": true,                             
+    // "noResolve": true,                                /* Disallow 'import'
