--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,4 +38,5 @@
     // "resolveJsonModule": true,                        /* Enable importing .json files. */
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
-    /* JavaS
+    /* JavaScript Support */
+    "allowJs": true,   
