--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,4 +39,4 @@
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
     /* JavaScript Support */
-    "allowJs": true,                                  /* Allow JavaScript files to be a part of your
+    "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' op
