--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,4 +40,4 @@
 
     /* JavaScript Support */
     "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
-    // "checkJs": true,                                  /* Enable e
+    // "checkJs": true,                                  /* Enable error reporting in type-checked JavaScript
