--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,4 +44,4 @@
     // "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
 
     /* Emit */
-    "declaration": true,             
+    "declaration": true,                              /* Generate .d.ts files f
