Changed class name

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,4 +45,5 @@
 
     /* Emit */
     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-    // "declarationMap": true,                           /* Create sourcemaps for d.
+    // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
+    // "emitDeclarati
