--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,4 +46,4 @@
     /* Emit */
     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-    // "emitDeclarati
+    // "emitDeclarationOnly": true,                      /*
