--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,4 +46,5 @@
     /* Emit */
     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-    // "emitDeclarationOnly": true,                      /* Only output d.ts files and 
+    // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
+    /
