--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,4 +47,4 @@
     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
-    // "sourceMap": true,                                /* Create
+    // "sourceMap": true,                                /* Create source map files for emitted J
