--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,4 +48,4 @@
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
-    // "outFile": "./",            
+    // "outFile": "./",                                  /* Specify a
