--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,4 +49,5 @@
     // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
-    "outDir": "./prod",                                   /* Specify an output folder for all emitted file
+    "outDir": "./prod",                                   /* Specify an output folder for all emitted files. */
+    // "removeComments
