--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,4 +50,4 @@
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     "outDir": "./prod",                                   /* Specify an output folder for all emitted files. */
-    // "removeComments
+    // "removeComments": true,                       
