--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,4 +51,5 @@
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     "outDir": "./prod",                                   /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
-    // "noEmit": true,                                   /* Disable emitti
+    // "noEmit": true,                                   /* Disable emitting files from a compilation. */
+    /
