--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,4 +52,4 @@
     "outDir": "./prod",                                   /* Specify an output folder for all emitted files. */
     // "removeComments": true,                           /* Disable emitting comments. */
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
-    /
+    // "importHelpers": true,           
