- converted neededforbuild to BuildRequires

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,4 +53,4 @@
     // "removeComments": true,                           /* Disable emitting comments. */
     // "noEmit": true,                                   /* Disable emitting files from a compilation. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
-    // "importsNotUsedAsValues": "
+    // "importsNotUsedAsValues": "remove",               /* Specify
