--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,4 +56,4 @@
     // "importsNotUsedAsValues": "remove",               /* Specify emit/checking behavior for imports that are only used for types. */
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
     // "sourceRoot": "",                                 /* Specify the root path for debuggers to find the reference source code. */
-    // "mapRoot": "",                                    /* Specify the location where de
+    // "mapRoot": "",                                    /* Specify the location where debugger should locate map files
