--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,4 +57,4 @@
     // "downlevelIteration": true,                       /* Emit more compliant, but verbose and less performant JavaScript for iteration. */
     // "sourceRoot": "",                                 /* Specify the root path for debuggers to find the reference source code. */
     // "mapRoot": "",                                    /* Specify the location where debugger should locate map files instead of generated locations. */
-    // "inlineSourceMap": true,                      
+    // "inlineSourceMap": true,                          /* Include source
