--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,4 +58,4 @@
     // "sourceRoot": "",                                 /* Specify the root path for debuggers to find the reference source code. */
     // "mapRoot": "",                                    /* Specify the location where debugger should locate map files instead of generated locations. */
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
-    // "inlineSources": true,                            /* Include source cod
+    // "inlineSources": true,                            /* Include source code in the sourcemaps inside th
