Add more translations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,4 +59,4 @@
     // "mapRoot": "",                                    /* Specify the location where debugger should locate map files instead of generated locations. */
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "inlineSources": true,                            /* Include source code in the sourcemaps inside the emitted JavaScript. */
-    // "emitBOM": true,                  
+    // "emitBOM": true,                                  /* Emit a
