* Cleanup: SVN propset.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,4 +61,4 @@
     // "inlineSources": true,                            /* Include source code in the sourcemaps inside the emitted JavaScript. */
     // "emitBOM": true,                                  /* Emit a UTF-8 Byte Order Mark (BOM) in the beginning of output files. */
     // "newLine": "crlf",                                /* Set the newline character for emitting files. */
-    // "stripInternal": true,           
+    // "stripInternal": true,                            /* Di
