Update Spanish translation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,4 +62,4 @@
     // "emitBOM": true,                                  /* Emit a UTF-8 Byte Order Mark (BOM) in the beginning of output files. */
     // "newLine": "crlf",                                /* Set the newline character for emitting files. */
     // "stripInternal": true,                            /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
-    // "noEmitHelpers": true,                            /* Disable generating custom
+    // "noEmitHelpers": true,                            /* Disable generating custom helper functions like '_
