Fix typo in readme.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,4 +64,4 @@
     // "stripInternal": true,                            /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
     // "noEmitHelpers": true,                            /* Disable generating custom helper functions like '__extends' in compiled output. */
     // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
-    // "preserveConstEnums": true,    
+    // "preserveConstEnums": true,                       /* Disable
