--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,4 +66,4 @@
     // "noEmitOnError": true,                            /* Disable emitting files if any type checking errors are reported. */
     // "preserveConstEnums": true,                       /* Disable erasing 'const enum' declarations in generated code. */
     // "declarationDir": "./",                           /* Specify the output directory for generated declaration files. */
-    // "preserveValueImp
+    // "preserveValueImports": true,                     
