l10n: Updated German (de) translation to 98%

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,4 +69,4 @@
     // "preserveValueImports": true,                     /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */
 
     /* Interop Constraints */
-    // "isolatedModu
+    // "isolatedModules": true,                          /*
