--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,4 +75,5 @@
     // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
 
-    /* Type
+    /* Type Checking */
+    "strict":
