--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,4 +76,4 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
 
     /* Type Checking */
-    "strict":
+    "strict": true,                             
