--- a/tsconfig.json
+++ b/tsconfig.json
@@ -80,4 +80,4 @@
     // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
     // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
-    // "str
+    // "strictBindCallApply": true,    
