--- a/tsconfig.json
+++ b/tsconfig.json
@@ -88,4 +88,4 @@
     // "noUnusedLocals": true,                           /* Enable error reporting when local variables aren't read. */
     // "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read. */
     // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
-    // "noImplicitReturns": true,         
+    // "noImplicitReturns": true,                        /* Enable error r
