--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,4 +98,4 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true            
+    "skipLibCheck": true                                 /* Skip ty
