--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,4 +98,6 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip ty
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+  },
+ 
