sctp: Prevent soft lockup when sctp_accept() is called during a timeout event

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,4 +101,4 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["src"],
-  "exc
+  "exclude": ["node_modules","**/_
